--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "rimraf dist && webpack -p --progress --hide-modules"
   },
   "dependencies": {
-    "element-ui": "^2.3.4",
-    "vue": "^2.5.16",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "element-ui": "^2.15.6",
+    "vue": "^2.5.16"
   },
   "engines": {
     "node": ">=6"
